--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title></title>
+      <link rel="stylesheet" type="text/css"  href="css/style.css">
+      <title>Dean's Blog</title>
    </head>
    <body>
-      <h1>Dean's Blog</h1>
-      <p>这是我的第一篇博客！</p>
+      <ul>
+          <li><a>News</a></li>
+          <li><a>Contact</a> </li>
+          <li><a href="blog.html">Blog</a></li>
+         <li><a>Home</a></li>
+      </ul>
+
+      <br/><br/><br/>
+      <br/><br/><br/>
 
    </body>
 </html>
