modify the main page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <article>
             <br><br>
             <h3>辉哥的博客</h3>
-            <h4><i>---Dean's Blog&nbsp;&nbsp;&nbsp;</i></h4>
+            <h4><i>---Dean's Blog</i></h4>
             <p>大道至简</p>
         </article>
     </aside>
