fix the main page image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </aside>
 
     <footer class="mainFooter">
-        <p>Copyright &copy: 2017~2018 <a href="EnjoyCodingDean.github.io" title="Dean's blog">&nbsp;&nbsp;Dean's Blog</a></p>
+        <p>Copyright &copy: 2017~2018 <a href="https://EnjoyCodingDean.github.io" title="Dean's blog">&nbsp;&nbsp;Dean's Blog</a></p>
     </footer>
 
     <script type="text/javascript">
