--- a/blog_pages/utf8_introduction/utf8_intro.html
+++ b/blog_pages/utf8_introduction/utf8_intro.html
@@ -81,7 +81,7 @@
     </div>
 
     <footer class="mainFooter">
-        <p>Copyright &copy: <a href="EnjoyCodingDean.github.io" title="Dean's blog">&nbsp;&nbsp;Dean's Blog</a></p>
+        <p>Copyright &copy: <a href="https://EnjoyCodingDean.github.io" title="Dean's blog">&nbsp;&nbsp;Dean's Blog</a></p>
     </footer>
 
 </body>
